# GWZ-Bot

./: README.md  backup_data.txt  main.py  mainbank.json  pingsux.py  prefixes.json  pyproject.toml  server.json
cogs/: currency.py  fun.py  info.py  math.py  moderation.py  nff.py  server.py
