[tool.poetry]
name = "thisfakeprogrammers"
version = "0.1.0"
description = "Discord Bot"
authors = ["Alien 12321 <idonthaveanemail@dontmsgme.notmyemail>","GWZ Youtube <idkhisemail@soimnotgonnawriteit.sothisisnothisemail>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
praw = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
